--- a/assets/header_main.css
+++ b/assets/header_main.css
@@ -47,7 +47,7 @@
 .menu {
 	margin-right: 114px;
 	display: flex;
-	grid-column-gap: 10px;
+/*	grid-column-gap: 10px;*/
 	justify-content: flex-end;
 	align-items: center;
 }
